--- a/pta.html
+++ b/pta.html
@@ -94,7 +94,7 @@
 
         <!-- Secretary -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="200">
-          <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" alt="Secretary">
+          <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary">
           <h6>Mr. Fairoosudheen P</h6>
           <small>General Secretary</small>
           <small>📞 9847132567</small>
@@ -102,7 +102,7 @@
 
         <!-- Treasurer -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="300">
-          <img src="https://i.ibb.co/PZbJ5KM9/saleem-1.jpg" alt="Treasurer">
+          <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer">
           <h6>Mr. Saif Saleem P</h6>
           <small>Treasurer</small>
           <small>📞 9567341256</small>
@@ -110,7 +110,7 @@
 
         <!-- Staff Secretary -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="400">
-          <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Vice President">
+          <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Vice President">
           <h6>Mr. Ameerudheen P</h6>
           <small>Staff Sectretary</small>
           <small>📞 8078055520</small>
@@ -165,3 +165,4 @@
   </script>
 </body>
 </html>
+
