--- a/faculties.html
+++ b/faculties.html
@@ -102,7 +102,7 @@
         <!-- Faculty 3 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="faculty-card text-center">
-            <img src="https://i.ibb.co/5KGtvHw/library.jpg" alt="Darimi Usthad">
+            <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Darimi Usthad">
             <h6 class="fw-bold mt-3">DARIMI USTHAD</h6>
             <small class="text-warning d-block">TEACHER</small>
             <small class="d-block text-light">📞 8078055520</small>
@@ -113,7 +113,7 @@
         <!-- Faculty 4 -->
         <div class="col-6 col-md-4 col-lg-3">
           <div class="faculty-card text-center">
-            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" alt="Fairoosudheen Aslami">
+            <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Fairoosudheen Aslami">
             <h6 class="fw-bold mt-3">FAIROOSUDHEEN ASLAMI</h6>
             <small class="text-warning d-block">TEACHER</small>
             <small class="d-block text-light">📞 9497349254</small>
@@ -137,4 +137,5 @@
 
 </body>
 </html>
+
 
