--- a/pta.html
+++ b/pta.html
@@ -1,73 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PTA Members | Noorussalam Madrasa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
 
   <!-- AOS Animation Library -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       background: #f8f9fa;
+      color: #212529;
     }
+
     header {
       background: linear-gradient(135deg, #0b5ed7, #74b9ff);
-      color: white;
+      color: #fff;
       text-align: center;
-      padding: 2rem 1rem;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+      padding: 2.5rem 1rem;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
     }
+
     header h2 {
       font-weight: 700;
+      letter-spacing: 0.5px;
     }
+
     .member img {
       width: 150px;
       height: 150px;
       object-fit: cover;
       border-radius: 50%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
       transition: transform 0.3s ease;
     }
+
     .member img:hover {
       transform: scale(1.05);
     }
+
     .member h6 {
       margin-top: 10px;
       font-weight: 600;
       color: #0b5ed7;
     }
+
     .member small {
       display: block;
       color: #6c757d;
+      font-size: 0.9rem;
     }
+
     .activity-card {
-      background: white;
+      background: #fff;
       border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
       text-align: center;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
+
     .activity-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
     }
+
     footer {
       background: #0b5ed7;
-      color: white;
+      color: #fff;
       text-align: center;
-      padding: 10px 0;
-      margin-top: 40px;
+      padding: 12px 0;
+      margin-top: 60px;
+      font-size: 0.9rem;
+      box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .btn-outline-primary {
+      border-width: 2px;
+      font-weight: 500;
+      transition: all 0.3s ease;
+    }
+
+    .btn-outline-primary:hover {
+      background-color: #0b5ed7;
+      color: #fff;
+      transform: translateY(-2px);
     }
   </style>
 </head>
-<body>
 
+<body>
   <!-- HEADER -->
   <header data-aos="fade-down">
     <h2>Parent-Teacher Association (PTA)</h2>
@@ -83,10 +113,9 @@
       </div>
 
       <div class="row g-4 justify-content-center">
-
         <!-- President -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="100">
-          <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President">
+          <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President" />
           <h6>Mr. Abdu Mangalath</h6>
           <small>President</small>
           <small>📞 9745234567</small>
@@ -94,7 +123,7 @@
 
         <!-- Secretary -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="200">
-          <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary">
+          <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary" />
           <h6>Mr. Fairoosudheen P</h6>
           <small>General Secretary</small>
           <small>📞 9847132567</small>
@@ -102,7 +131,7 @@
 
         <!-- Treasurer -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="300">
-          <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer">
+          <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer" />
           <h6>Mr. Saif Saleem P</h6>
           <small>Treasurer</small>
           <small>📞 9567341256</small>
@@ -110,42 +139,52 @@
 
         <!-- Staff Secretary -->
         <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="400">
-          <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Vice President">
+          <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Staff Secretary" />
           <h6>Mr. Ameerudheen P</h6>
-          <small>Staff Sectretary</small>
+          <small>Staff Secretary</small>
           <small>📞 8078055520</small>
         </div>
-
       </div>
 
       <!-- PTA ACTIVITIES -->
       <div class="text-center mt-5 mb-4" data-aos="fade-right">
         <h5 class="fw-bold text-primary">Recent PTA Activities</h5>
       </div>
+
       <div class="row g-4">
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
           <div class="activity-card">
             <h6>Parent Awareness Program</h6>
-            <p class="text-muted small mb-0">A seminar conducted on effective parenting and communication with teachers.</p>
+            <p class="text-muted small mb-0">
+              A seminar conducted on effective parenting and communication with teachers.
+            </p>
           </div>
         </div>
+
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
           <div class="activity-card">
             <h6>Campus Clean-Up Day</h6>
-            <p class="text-muted small mb-0">Parents, students, and teachers joined hands to beautify the campus.</p>
+            <p class="text-muted small mb-0">
+              Parents, students, and teachers joined hands to beautify the campus.
+            </p>
           </div>
         </div>
+
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
           <div class="activity-card">
             <h6>Annual PTA Meeting</h6>
-            <p class="text-muted small mb-0">Discussion on curriculum updates, safety measures, and student welfare.</p>
+            <p class="text-muted small mb-0">
+              Discussion on curriculum updates, safety measures, and student welfare.
+            </p>
           </div>
         </div>
       </div>
 
       <!-- BACK TO HOME -->
       <div class="text-center mt-5" data-aos="fade-up">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+        <a href="index.html" class="btn btn-outline-primary px-4">
+          <i class="fa-solid fa-arrow-left me-2"></i>Back to Home
+        </a>
       </div>
     </div>
   </section>
@@ -165,4 +204,3 @@
   </script>
 </body>
 </html>
-
