--- a/pta.html
+++ b/pta.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PTA Members | Noorussalam Madrasa</title>
 
-  <!-- Bootstrap -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
 
   <!-- AOS Animation Library -->
@@ -17,16 +15,18 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: #f8f9fa;
-      color: #212529;
+      background: linear-gradient(180deg, #0b5ed7 0%, #0a58ca 100%);
+      color: #fff;
+      min-height: 100vh;
     }
 
     header {
-      background: linear-gradient(135deg, #0b5ed7, #74b9ff);
+      background: rgba(255, 255, 255, 0.1);
       color: #fff;
       text-align: center;
       padding: 2.5rem 1rem;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      border-bottom: 2px solid rgba(255, 255, 255, 0.2);
     }
 
     header h2 {
@@ -34,65 +34,74 @@
       letter-spacing: 0.5px;
     }
 
+    section {
+      background: transparent;
+    }
+
     .member img {
       width: 150px;
       height: 150px;
       object-fit: cover;
       border-radius: 50%;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-      transition: transform 0.3s ease;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .member img:hover {
-      transform: scale(1.05);
+      transform: scale(1.07);
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
+    }
+
+    .member {
+      color: #fff;
     }
 
     .member h6 {
       margin-top: 10px;
       font-weight: 600;
-      color: #0b5ed7;
     }
 
     .member small {
       display: block;
-      color: #6c757d;
-      font-size: 0.9rem;
+      color: #d0e4ff;
     }
 
     .activity-card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+      background: #ffffff;
+      border-radius: 15px;
+      padding: 25px;
+      color: #0b5ed7;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
       text-align: center;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     .activity-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
+    }
+
+    .btn-outline-light {
+      border: 2px solid #fff;
+      color: #fff;
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+
+    .btn-outline-light:hover {
+      background-color: #fff;
+      color: #0b5ed7;
+      transform: translateY(-2px);
     }
 
     footer {
-      background: #0b5ed7;
+      background: rgba(0, 0, 0, 0.1);
       color: #fff;
       text-align: center;
       padding: 12px 0;
-      margin-top: 60px;
+      margin-top: 50px;
       font-size: 0.9rem;
-      box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .btn-outline-primary {
-      border-width: 2px;
-      font-weight: 500;
-      transition: all 0.3s ease;
-    }
-
-    .btn-outline-primary:hover {
-      background-color: #0b5ed7;
-      color: #fff;
-      transform: translateY(-2px);
+      border-top: 1px solid rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
@@ -108,8 +117,8 @@
   <section class="py-5">
     <div class="container">
       <div class="text-center mb-5" data-aos="zoom-in">
-        <h4 class="fw-bold text-primary">Executive Members (2025–26)</h4>
-        <p class="text-muted">Meet the key members of our PTA</p>
+        <h4 class="fw-bold text-white">Executive Members (2025–26)</h4>
+        <p class="text-light opacity-75">Meet the key members of our PTA</p>
       </div>
 
       <div class="row g-4 justify-content-center">
@@ -148,7 +157,7 @@
 
       <!-- PTA ACTIVITIES -->
       <div class="text-center mt-5 mb-4" data-aos="fade-right">
-        <h5 class="fw-bold text-primary">Recent PTA Activities</h5>
+        <h5 class="fw-bold text-white">Recent PTA Activities</h5>
       </div>
 
       <div class="row g-4">
@@ -182,7 +191,7 @@
 
       <!-- BACK TO HOME -->
       <div class="text-center mt-5" data-aos="fade-up">
-        <a href="index.html" class="btn btn-outline-primary px-4">
+        <a href="index.html" class="btn btn-outline-light px-4">
           <i class="fa-solid fa-arrow-left me-2"></i>Back to Home
         </a>
       </div>
