--- a/pta.html
+++ b/pta.html
@@ -1,215 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PTA Members | Noorussalam Madrasa</title>
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-
-  <!-- AOS Animation Library -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
+      background-color: #0b1d3a;
+      color: #f8f9fa;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(180deg, #0b5ed7 0%, #0a58ca 100%);
-      color: #fff;
-      min-height: 100vh;
     }
 
     header {
-      background: rgba(255, 255, 255, 0.1);
+      background: linear-gradient(90deg, #0d47a1, #1976d2);
+    }
+
+    h2, h4, h6 {
       color: #fff;
-      text-align: center;
-      padding: 2.5rem 1rem;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-      border-bottom: 2px solid rgba(255, 255, 255, 0.2);
     }
 
-    header h2 {
-      font-weight: 700;
-      letter-spacing: 0.5px;
+    .pta-card {
+      background-color: #10264d;
+      border: none;
+      border-radius: 15px;
+      transition: transform 0.3s, box-shadow 0.3s;
+      padding: 20px 10px;
+      height: 100%;
     }
 
-    section {
-      background: transparent;
+    .pta-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(255, 215, 0, 0.2);
     }
 
-    .member img {
+    .pta-card img {
       width: 150px;
       height: 150px;
       object-fit: cover;
       border-radius: 50%;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 3px solid #ffd700;
     }
 
-    .member img:hover {
-      transform: scale(1.07);
-      box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
-    }
-
-    .member {
-      color: #fff;
-    }
-
-    .member h6 {
-      margin-top: 10px;
-      font-weight: 600;
-    }
-
-    .member small {
-      display: block;
-      color: #d0e4ff;
-    }
-
-    .activity-card {
-      background: #ffffff;
-      border-radius: 15px;
-      padding: 25px;
-      color: #0b5ed7;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
-      text-align: center;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .activity-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
-    }
-
-    .btn-outline-light {
-      border: 2px solid #fff;
-      color: #fff;
-      transition: all 0.3s ease;
+    .pta-role {
+      color: #ffd700;
       font-weight: 500;
     }
 
-    .btn-outline-light:hover {
-      background-color: #fff;
-      color: #0b5ed7;
-      transform: translateY(-2px);
+    .pta-about {
+      font-size: 0.9rem;
+      color: #d0d3d8;
+      margin-top: 8px;
+      min-height: 60px;
+    }
+
+    .btn-outline-primary {
+      border-color: #ffd700;
+      color: #ffd700;
+    }
+
+    .btn-outline-primary:hover {
+      background-color: #ffd700;
+      color: #0b1d3a;
     }
 
     footer {
-      background: rgba(0, 0, 0, 0.1);
-      color: #fff;
-      text-align: center;
-      padding: 12px 0;
-      margin-top: 50px;
-      font-size: 0.9rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.2);
+      background: #06142c;
     }
   </style>
 </head>
-
 <body>
+
   <!-- HEADER -->
-  <header data-aos="fade-down">
-    <h2>Parent-Teacher Association (PTA)</h2>
-    <p class="mb-0">Working together for students’ success</p>
+  <header class="text-white text-center py-4 shadow-sm">
+    <h2 class="mb-1">Parent–Teacher Association (PTA)</h2>
+    <p class="mb-0 text-light">Working together for our students’ success</p>
   </header>
 
-  <!-- MEMBERS SECTION -->
-  <section class="py-5">
+  <!-- PTA MEMBERS SECTION -->
+  <section id="pta" class="py-5">
     <div class="container">
-      <div class="text-center mb-5" data-aos="zoom-in">
-        <h4 class="fw-bold text-white">Executive Members (2025–26)</h4>
-        <p class="text-light opacity-75">Meet the key members of our PTA</p>
-      </div>
+      <div class="row g-4">
 
-      <div class="row g-4 justify-content-center">
         <!-- President -->
-        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="100">
-          <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President" />
-          <h6>Mr. Abdu Mangalath</h6>
-          <small>President</small>
-          <small>📞 9745234567</small>
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="pta-card text-center">
+            <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President">
+            <h6 class="fw-bold mt-3">ABDU MANGALATH</h6>
+            <small class="pta-role d-block">PRESIDENT</small>
+            <small class="d-block text-light">📞 9745234567</small>
+            <p class="pta-about">Leading the PTA with vision and dedication, fostering collaboration between parents and teachers.</p>
+          </div>
         </div>
 
         <!-- Secretary -->
-        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="200">
-          <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary" />
-          <h6>Mr. Fairoosudheen P</h6>
-          <small>General Secretary</small>
-          <small>📞 9847132567</small>
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="pta-card text-center">
+            <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary">
+            <h6 class="fw-bold mt-3">FAIROOSUDHEEN P</h6>
+            <small class="pta-role d-block">GENERAL SECRETARY</small>
+            <small class="d-block text-light">📞 9847132567</small>
+            <p class="pta-about">Coordinates all PTA activities and maintains strong communication among members.</p>
+          </div>
         </div>
 
         <!-- Treasurer -->
-        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="300">
-          <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer" />
-          <h6>Mr. Saif Saleem P</h6>
-          <small>Treasurer</small>
-          <small>📞 9567341256</small>
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="pta-card text-center">
+            <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer">
+            <h6 class="fw-bold mt-3">SAIF SALEEM P</h6>
+            <small class="pta-role d-block">TREASURER</small>
+            <small class="d-block text-light">📞 9567341256</small>
+            <p class="pta-about">Responsible for managing PTA funds and ensuring financial transparency and growth.</p>
+          </div>
         </div>
 
         <!-- Staff Secretary -->
-        <div class="col-6 col-md-4 col-lg-3 text-center member" data-aos="fade-up" data-aos-delay="400">
-          <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Staff Secretary" />
-          <h6>Mr. Ameerudheen P</h6>
-          <small>Staff Secretary</small>
-          <small>📞 8078055520</small>
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="pta-card text-center">
+            <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Staff Secretary">
+            <h6 class="fw-bold mt-3">AMEERUDHEEN P</h6>
+            <small class="pta-role d-block">STAFF SECRETARY</small>
+            <small class="d-block text-light">📞 8078055520</small>
+            <p class="pta-about">Acts as a bridge between staff and PTA, ensuring smooth communication and teamwork.</p>
+          </div>
         </div>
+
       </div>
 
       <!-- PTA ACTIVITIES -->
-      <div class="text-center mt-5 mb-4" data-aos="fade-right">
-        <h5 class="fw-bold text-white">Recent PTA Activities</h5>
+      <div class="text-center mt-5 mb-4">
+        <h4 class="text-warning fw-bold">Recent PTA Activities</h4>
       </div>
 
       <div class="row g-4">
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
-          <div class="activity-card">
-            <h6>Parent Awareness Program</h6>
-            <p class="text-muted small mb-0">
-              A seminar conducted on effective parenting and communication with teachers.
-            </p>
+        <div class="col-md-4">
+          <div class="pta-card text-center">
+            <h6 class="fw-bold text-warning">Parent Awareness Program</h6>
+            <p class="pta-about">A seminar on effective parenting and building strong home-school partnerships.</p>
           </div>
         </div>
-
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
-          <div class="activity-card">
-            <h6>Campus Clean-Up Day</h6>
-            <p class="text-muted small mb-0">
-              Parents, students, and teachers joined hands to beautify the campus.
-            </p>
+        <div class="col-md-4">
+          <div class="pta-card text-center">
+            <h6 class="fw-bold text-warning">Campus Clean-Up Day</h6>
+            <p class="pta-about">Parents, teachers, and students joined hands to beautify the school environment.</p>
           </div>
         </div>
-
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-          <div class="activity-card">
-            <h6>Annual PTA Meeting</h6>
-            <p class="text-muted small mb-0">
-              Discussion on curriculum updates, safety measures, and student welfare.
-            </p>
+        <div class="col-md-4">
+          <div class="pta-card text-center">
+            <h6 class="fw-bold text-warning">Annual PTA Meeting</h6>
+            <p class="pta-about">Discussed curriculum updates, safety measures, and student welfare initiatives.</p>
           </div>
         </div>
       </div>
 
       <!-- BACK TO HOME -->
-      <div class="text-center mt-5" data-aos="fade-up">
-        <a href="index.html" class="btn btn-outline-light px-4">
-          <i class="fa-solid fa-arrow-left me-2"></i>Back to Home
-        </a>
+      <div class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer data-aos="fade-up">
-    <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
+  <footer class="text-white text-center py-3 mt-4">
+    <small>© 2025 All rights reserved. | Noorussalam Madrasa</small>
   </footer>
 
-  <!-- AOS Script -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 1000,
-      once: true
-    });
-  </script>
 </body>
 </html>
