--- a/pta.html
+++ b/pta.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PTA Members | Noorussalam Madrasa</title>
+
+  <!-- Bootstrap & AOS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
   <style>
     body {
       background-color: #0b1d3a;
@@ -72,7 +76,7 @@
 <body>
 
   <!-- HEADER -->
-  <header class="text-white text-center py-4 shadow-sm">
+  <header class="text-white text-center py-4 shadow-sm" data-aos="fade-down">
     <h2 class="mb-1">Parent–Teacher Association (PTA)</h2>
     <p class="mb-0 text-light">Working together for our students’ success</p>
   </header>
@@ -80,10 +84,15 @@
   <!-- PTA MEMBERS SECTION -->
   <section id="pta" class="py-5">
     <div class="container">
+      <div class="text-center mb-5" data-aos="zoom-in">
+        <h4 class="text-warning fw-bold">Executive Members (2025–26)</h4>
+        <p class="text-light">Meet the key members of our PTA</p>
+      </div>
+
       <div class="row g-4">
 
         <!-- President -->
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="100">
           <div class="pta-card text-center">
             <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President">
             <h6 class="fw-bold mt-3">ABDU MANGALATH</h6>
@@ -94,7 +103,7 @@
         </div>
 
         <!-- Secretary -->
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="200">
           <div class="pta-card text-center">
             <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary">
             <h6 class="fw-bold mt-3">FAIROOSUDHEEN P</h6>
@@ -105,7 +114,7 @@
         </div>
 
         <!-- Treasurer -->
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
           <div class="pta-card text-center">
             <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer">
             <h6 class="fw-bold mt-3">SAIF SALEEM P</h6>
@@ -116,7 +125,7 @@
         </div>
 
         <!-- Staff Secretary -->
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="400">
           <div class="pta-card text-center">
             <img src="https://i.ibb.co/kWR6Z5B/AMEER.jpg" alt="Staff Secretary">
             <h6 class="fw-bold mt-3">AMEERUDHEEN P</h6>
@@ -129,24 +138,24 @@
       </div>
 
       <!-- PTA ACTIVITIES -->
-      <div class="text-center mt-5 mb-4">
+      <div class="text-center mt-5 mb-4" data-aos="fade-right">
         <h4 class="text-warning fw-bold">Recent PTA Activities</h4>
       </div>
 
       <div class="row g-4">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="pta-card text-center">
             <h6 class="fw-bold text-warning">Parent Awareness Program</h6>
             <p class="pta-about">A seminar on effective parenting and building strong home-school partnerships.</p>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
           <div class="pta-card text-center">
             <h6 class="fw-bold text-warning">Campus Clean-Up Day</h6>
             <p class="pta-about">Parents, teachers, and students joined hands to beautify the school environment.</p>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
           <div class="pta-card text-center">
             <h6 class="fw-bold text-warning">Annual PTA Meeting</h6>
             <p class="pta-about">Discussed curriculum updates, safety measures, and student welfare initiatives.</p>
@@ -155,16 +164,26 @@
       </div>
 
       <!-- BACK TO HOME -->
-      <div class="text-center mt-5">
+      <div class="text-center mt-5" data-aos="fade-up">
         <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
       </div>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="text-white text-center py-3 mt-4">
+  <footer class="text-white text-center py-3 mt-4" data-aos="fade-up">
     <small>© 2025 All rights reserved. | Noorussalam Madrasa</small>
   </footer>
+
+  <!-- AOS Script -->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true,
+      offset: 100
+    });
+  </script>
 
 </body>
 </html>
